--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -1215,8 +1215,9 @@ footer
 		flex-direction: column
 		justify-content: center
 		text-align: center
-		height: 100%
+		width: 100%
 		margin: 0 auto
+		font-size: 20px
 		input
 			width: 300px
 			margin: 30px auto
@@ -1234,6 +1235,15 @@ footer
 		.btn
 			margin: 30px auto
 			width: 300px
+			border: none
+			padding: inherit
+			&:hover
+				color: #fff
+				transition: all 0.6s
+				box-shadow: 0 7px 60px 5px rgba(230,87,87,1)
+			&:focus,&:hover,&:active
+				outline: none !important
+				color: #fff
 #modal_close
 	position: absolute
 	top: 5px
@@ -1268,8 +1278,9 @@ footer
 		flex-direction: column
 		justify-content: center
 		text-align: center
-		height: 100%
+		width: 100%
 		margin: 0 auto
+		font-size: 20px
 		input
 			width: 300px
 			margin: 30px auto
@@ -1284,23 +1295,18 @@ footer
 			&:placeholder
 				color: #737373
 				font-size: 12px
-		//textarea
-		//	margin: 30px auto
-		//	width: 300px
-		//	border: 2px solid #6ac0f3
-		//	border-radius: 6px
-		//	font-size: 12px
-		//	color: #737373
-		//	display: flex
-		//	align-items: center
-		//	justify-content: center
-		//	text-align: center
-		//	&:focus,&:hover,&:active
-		//		outline: none !important
-		//		color: #fff
 		.btn
 			margin: 30px auto
 			width: 300px
+			border: none
+			padding: inherit
+			&:hover
+				color: #fff
+				transition: all 0.6s
+				box-shadow: 0 7px 60px 5px rgba(230,87,87,1)
+			&:focus,&:hover,&:active
+				outline: none !important
+				color: #fff
 #modal_close1
 	position: absolute
 	top: 5px
@@ -1353,6 +1359,7 @@ footer
 		position: absolute
 		left: 180px
 
+
 #modal_close2
 	position: absolute
 	top: 5px
@@ -1390,7 +1397,8 @@ footer
 		flex-direction: column
 		justify-content: center
 		text-align: center
-		height: 100%
+		width: 100%
+		font-size: 20px
 		input
 			width: 300px
 			margin: 20px auto
@@ -1411,7 +1419,7 @@ footer
 			height: 70px
 			border: 2px solid #6ac0f3
 			border-radius: 6px
-			font-size: 12px
+			font-size: 20px
 			color: #737373
 			display: flex
 			align-items: center
@@ -1419,7 +1427,6 @@ footer
 			text-align: center
 			&:focus,&:hover,&:active
 				outline: none !important
-				color: #fff
 				box-shadow: 0 7px 60px 5px #6ac0f3
 				transition: all 0.6s
 			&:placeholder
@@ -1428,6 +1435,15 @@ footer
 		.btn
 			margin: 30px auto
 			width: 300px
+			border: none
+			padding: inherit
+			&:hover
+				color: #fff
+				transition: all 0.6s
+				box-shadow: 0 7px 60px 5px rgba(230,87,87,1)
+			&:focus,&:hover,&:active
+				outline: none !important
+				color: #fff
 #modal_close3
 	position: absolute
 	top: 5px
